--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,3 +1,7 @@
 <p>
-  <strong>Name:</strong><%= @playlist.name %>
+  <strong>Name: </strong><%= @playlist.name %>
+</p>
+
+<p>
+  <strong>Name: </strong><%= @playlist.number_of_votes %>
 </p>
